--- a/clusters/flux-system/kustomization.yaml
+++ b/clusters/flux-system/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- gotk-sync.yaml
+- applications-sync.yaml
+- repo.yaml
 - infrastructure-sync.yaml
